# comp-cars-deep-learning-analysis

./: .gitignore  LICENSE  README.md  dataset.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
configs/: CLIP.yaml  embeddings.yaml  resnet50_classification.yaml  resnet50_metric_learning.yaml  vitb32_classification.yaml  vitb32_metric_learning.yaml
scripts/: README.md
scripts/analysis/: analyze_clip_layers.py  analyze_vision_models.py
scripts/extraction/: extract_clip_layers_results.py  extract_vision_results.py
scripts/pipeline/: Embeddings.py  Finetuning.py
scripts/visualization/: visualize_clip_layers.py  visualize_training_history.py  visualize_training_history_clip.py  visualize_vision_models.py
src/: __init__.py  defaults.py
src/config/: TransformConfig.py  __init__.py
src/data/: DataFrameMaker.py  MyDataset.py  __init__.py
src/models/: MetricLearningLosses.py  MyCLIPModel.py  MyVisionModel.py  __init__.py
src/pipeline/: EmbeddingsPipeline.py  FineTuningPipeline.py  __init__.py
src/utils/: ClusterVisualizer.py  ClusteringAnalyzer.py  DimensionalityReducer.py  JsonUtils.py  __init__.py
tests/: README.md  __init__.py  test_clip_integration.py  test_config.py  test_imports.py  test_utils.py
